--- a/index.html
+++ b/index.html
@@ -698,6 +698,226 @@
         </button>
     </div>
 </card>
+            <!-- Idea Card 13 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816654/djbzjezpngrwaqnmdygr_rovvvc.avif" 
+             alt="Candy Cane Jail Elf" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">13. Candy Cane Jail Elf</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">Oh no, the elf has gotten himself locked inside a candy cane jail! The kids will love figuring out how he ended up trapped behind those sweet red-and-white bars. A perfect setup for giggles and rescue missions in the morning.</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816654/djbzjezpngrwaqnmdygr_rovvvc.avif"
+                data-file-name="Candy_Cane_Jail_Elf.avif"
+                aria-label="Save Candy Cane Jail Elf image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
+<!-- Idea Card 14 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816657/ghybcj99p0vux10w0p28_lkb8mb.avif" 
+             alt="Superhero Elf" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">14. Superhero Elf</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">This elf is no ordinary visitor—he’s here to save Christmas in his superhero disguise! With a tiny cape and mask, he looks ready to swoop in and fight holiday mischief. A fun idea for kids who adore heroes and big adventures.</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816657/ghybcj99p0vux10w0p28_lkb8mb.avif"
+                data-file-name="Superhero_Elf.avif"
+                aria-label="Save Superhero Elf image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
+<!-- Idea Card 15 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816476/bgv5a8dxallushf9tehb_pwklqf.avif" 
+             alt="Elf Balloon Ride" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">15. Elf Balloon Ride</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">Your elf is taking adventure to new heights with a homemade hot air balloon ride! Using a balloon and a cup as his basket, he floats above the room in style. It’s a magical surprise that sparks big imagination.</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816476/bgv5a8dxallushf9tehb_pwklqf.avif"
+                data-file-name="Elf_Balloon_Ride.avif"
+                aria-label="Save Elf Balloon Ride image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
+<!-- Idea Card 16 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816658/k0pjwdova6ozxfdlw84c_gm6r4q.avif" 
+             alt="Elf Campfire" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">16. Elf Campfire</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">The elf has set up a cozy little campsite right in the living room. With tissue-paper flames and marshmallows on sticks, he’s roasting snacks under the Christmas lights. A fun outdoorsy twist on holiday mischief.</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816658/k0pjwdova6ozxfdlw84c_gm6r4q.avif"
+                data-file-name="Elf_Campfire.avif"
+                aria-label="Save Elf Campfire image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
+<!-- Idea Card 17 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816658/irjajoyxqcx0fruirqmk_qwdsiq.avif" 
+             alt="Elf Candy Mess" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">17. Elf Candy Mess</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">Looks like the elf couldn’t resist sneaking into the candy stash! Surrounded by colorful wrappers and half-eaten treats, he’s clearly had a sugar rush. This silly scene is guaranteed to get kids laughing.</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816658/irjajoyxqcx0fruirqmk_qwdsiq.avif"
+                data-file-name="Elf_Candy_Mess.avif"
+                aria-label="Save Elf Candy Mess image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
+<!-- Idea Card 18 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816660/serbqv9kdk2ygrhngkxm_ybght5.avif" 
+             alt="Elf in a Tissue Box Bed" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">18. Elf in a Tissue Box Bed</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">After a long night of magical adventures, the elf has snuggled into a tissue box bed. With tissues pulled up like blankets, he looks extra cozy. Kids will find it adorable to catch him “sleeping in.”</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816660/serbqv9kdk2ygrhngkxm_ybght5.avif"
+                data-file-name="Elf_in_Tissue_Box_Bed.avif"
+                aria-label="Save Elf in a Tissue Box Bed image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
+<!-- Idea Card 19 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816659/rsmyaddzwntei21vjx7m_kqwtux.avif" 
+             alt="Artist Elf" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">19. Artist Elf</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">This elf is feeling extra creative and has started painting holiday masterpieces. With a tiny paintbrush in hand, he doodles Christmas trees, snowflakes, and stars. Kids will be amazed at his artistic talent.</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816659/rsmyaddzwntei21vjx7m_kqwtux.avif"
+                data-file-name="Artist_Elf.avif"
+                aria-label="Save Artist Elf image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
+<!-- Idea Card 20 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816654/diymuh24qqga1xbojogb_at89ns.avif" 
+             alt="Chef Elf with Pancakes" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">20. Chef Elf with Pancakes</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">Your elf has taken over the kitchen to whip up a stack of mini pancakes! Holding a tiny spatula, he looks proud of his holiday breakfast creation. It’s a deliciously funny surprise for the morning.</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816654/diymuh24qqga1xbojogb_at89ns.avif"
+                data-file-name="Chef_Elf_with_Pancakes.avif"
+                aria-label="Save Chef Elf with Pancakes image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
+<!-- Idea Card 21 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816654/wlsoqqmdzerpeam2cixw_dmzbzc.avif" 
+             alt="Rock Climbing Elf" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">21. Rock Climbing Elf</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">This daring elf has turned the wall into his own climbing gym! Using candy canes and string as his gear, he bravely scales upward. A perfect scene for adventurous kids who love action.</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816654/wlsoqqmdzerpeam2cixw_dmzbzc.avif"
+                data-file-name="Rock_Climbing_Elf.avif"
+                aria-label="Save Rock Climbing Elf image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
+<!-- Idea Card 22 -->
+<card class="bg-white rounded-lg shadow-lg overflow-hidden card-hover">
+    <div class="aspect-w-16 aspect-h-9 bg-gradient-to-br from-red-100 to-green-100">
+        <img src="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816663/uhgfou82vcy19z9tlpdg_hhqfri.avif" 
+             alt="DJ Party Elf" 
+             class="card-img" 
+             width="400" 
+             height="256"
+             loading="lazy" />
+    </div>
+    <div class="p-4 md:p-6">
+        <h3 class="text-lg md:text-xl font-semibold mb-2 text-pine-green">22. DJ Party Elf</h3>
+        <p class="text-gray-600 mb-4 text-sm md:text-base">Elf dressed as a DJ with headphones and toy turntable, colorful disco lights. A fun musical surprise that turns your living room into a holiday dance floor!</p>
+        <button class="btn-primary text-white px-4 py-2 rounded-lg w-full saveImageBtn text-sm md:text-base"
+                data-image-url="https://res.cloudinary.com/dsmt3fivf/image/upload/v1756816663/uhgfou82vcy19z9tlpdg_hhqfri.avif"
+                data-file-name="DJ_Party_Elf.avif"
+                aria-label="Save DJ Party Elf image">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>Save Image
+        </button>
+    </div>
+</card>
+
 
 
 
